<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="camera"
        android:enabled="true"
        android:icon="@drawable/ic_sc_camera"
        android:shortcutShortLabel="@string/sc_camera_short"
        android:shortcutLongLabel="@string/sc_camera_long"
        android:shortcutDisabledMessage="@string/sc_camera_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="vocabcheck://camera"
            android:targetClass="com.teacher.vocabcheck.MainActivity"
            android:targetPackage="com.teacher.vocabcheck" />
    </shortcut>

    <shortcut
        android:shortcutId="paste"
        android:enabled="true"
        android:icon="@drawable/ic_sc_paste"
        android:shortcutShortLabel="@string/sc_paste_short"
        android:shortcutLongLabel="@string/sc_paste_long"
        android:shortcutDisabledMessage="@string/sc_paste_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="vocabcheck://paste"
            android:targetClass="com.teacher.vocabcheck.MainActivity"
            android:targetPackage="com.teacher.vocabcheck" />
    </shortcut>

</shortcuts>
